<resources>
    <string name="app_name">Ornatis_TCC</string>
    <string name="opicional">Opicional*</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nome_negocio">Nome do negócio</string>
    <string name="cnpj">CNPJ</string>
    <string name="contato">Contato</string>
    <string name="logo">Logo</string>
    <string name="biografia">Biografia</string>
    <string name="nome">Nome</string>
    <string name="data_nascimento">Data de nascimento</string>
    <string name="cpf">CPF</string>
    <string name="foto">Foto</string>
    <string name="cep">CEP</string>
    <string name="bairro">Bairro</string>
    <string name="rua">Rua</string>
    <string name="numero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="cartao_credito">Cartão de crédito</string>
    <string name="cartao_debito">Cartão de débito</string>
    <string name="pix">Pix</string>
    <string name="via_app">Via app</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="produtos">Produtos</string>
    <string name="criar_agendamentos">Criar agendamentos</string>
    <string name="servicos">Serviços</string>
    <string name="agendamentos_proximos">Próximos agendamentos</string>
    <string name="historico">Histórico</string>
    <string name="sobreApp">Sobre o app</string>
    <string name="duvidas">Dúvidas</string>
    <string name="agendamentos">Agendamentos</string>
    <string name="novoFuncionario">Novo Funcionário</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="estatistica">Estatística</string>
    <string name="sair">SAIR</string>
    <string name="ListaDeFuncionario">Lista de funcionários</string>
    <string name="funcionario">Funcionário</string>
    <string name="inicio">Início</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="preco">Preço</string>
    <string name="desconto">Desconto</string>
    <string name="duracao">Duração</string>
    <string name="publico_alvo">Público alvo</string>
    <string name="detalhes">Detalhes</string>
    <string name="local_atendimento">Local de atendimento</string>
    <string name="estabelecimento">Estabelecimento</string>
    <string name="domicilio">Domicílio</string>
    <string name="servico_disponivel">Seviço ativo para uso?</string>
    <string name="intervalo_entre_servico">Intervalo entre um serviço e outro</string>
    <string name="categoria">Categoria</string>
    <string name="parte_corpo">Parte do corpo</string>
    <string name="hora_atendimento">Horário atendimento</string>
    <string name="categoria_servico">Cabelo</string>
    <string name="editarFuncionario">Editar Funcionário</string>
    <string name="tipo_cabelo">Tipo de cabelo</string>
    <string name="comprimento_cabelo">Comprimento do cabelo</string>
    <string name="cor_cabelo">Cor do cabelo</string>
    <string name="nome_funcioanrio">Nome funcionário</string>
    <string name="genero">Gênero</string>
    <string name="sugestaoSaloes">Sugestão de salões</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>