<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="@drawable/formato_retangulo_verde"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_notificacao"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_notifications_24"
        app:tint="@color/cinza_clarinho" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                app:cardBackgroundColor="#ff0000"
                app:cardCornerRadius="60dp">

                <ImageView
                    android:id="@+id/iv_dash_foto_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile" />

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Meu Perfil"
                    android:textColor="@color/white"
                    android:textSize="24dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_configuracoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings_24"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    app:tint="@color/cinza_clarinho" />

<!--                <LinearLayout-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="20dp">-->

<!--                    <ImageView-->
<!--                        android:id="@+id/iv_notificacoes"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:src="@drawable/ic_notifications_24"-->
<!--                        app:tint="@color/cinza_clarinho" />-->

<!--                </LinearLayout>-->
            </LinearLayout>
        </LinearLayout>



    </LinearLayout>

        <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:src="@drawable/ic_line_165" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="900dp">

            <TextView
                android:id="@+id/tv_historico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/historico"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                style="@style/textViewMenu"/>

            <TextView
                android:id="@+id/tv_sobreapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sobreApp"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                style="@style/textViewMenu"/>

            <TextView
                android:id="@+id/tv_duvidas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duvidas"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                style="@style/textViewMenu"/>

            <TextView
                android:id="@+id/tv_servicos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/servicos"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                style="@style/textViewMenu"/>

            <TextView
                android:id="@+id/tv_agendamentos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agendamentos"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                style="@style/textViewMenu"/>

            <TextView
                android:id="@+id/tv_produtos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/produtos"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                style="@style/textViewMenu"/>

            <TextView
                android:id="@+id/tv_estatistica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estatistica"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                style="@style/textViewMenu"/>


            <TextView
                android:id="@+id/tv_sair_conta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sair"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                style="@style/textViewMenu"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>