<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.conta_administradora.servico.PrestadorCadastroServicos"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/formato_retangulo_curvado_cinza"
        android:text="@string/servicos"
        style="@style/textViewTituloCadastroFuncionario"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="45dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_nome_do_funcionario"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome" />

            <EditText
                android:id="@+id/et_nome_do_funcionario"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="30dp">

                    <TextView
                        android:id="@+id/tv_preco"
                        style="@style/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/preco" />

                    <EditText
                        android:id="@+id/et_preco"
                        style="@style/editText"
                        android:background="@drawable/formato_edit_text"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:inputType="numberDecimal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="40dp">

                    <TextView
                        android:id="@+id/tv_desconto"
                        style="@style/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/desconto" />

                    <EditText
                        android:id="@+id/et_desconto"
                        style="@style/editText"
                        android:background="@drawable/formato_edit_text"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:inputType="number" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="40dp">

                    <TextView
                        android:id="@+id/tv_duracao"
                        style="@style/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duracao" />

                    <EditText
                        android:id="@+id/et_tempo_duracao"
                        style="@style/editText"
                        android:background="@drawable/formato_edit_text"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:inputType="time" />

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/tv_publico_alvo"
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publico_alvo" />

            <Spinner
                android:id="@+id/spiner_publico_alvo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/verde_claro" />


<!--            <TextView-->
<!--                android:id="@+id/tv_tempo_duracao"-->
<!--                style="@style/textView"-->
<!--                android:layout_width="120dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/tempo_duracao"-->
<!--                android:layout_marginTop="30dp"/>-->

<!--            <EditText-->
<!--                android:id="@+id/et_tempo_duracao"-->
<!--                style="@style/editText"-->
<!--                android:background="@drawable/formato_edit_text"-->
<!--                android:layout_width="60dp"-->
<!--                android:layout_height="30dp"-->
<!--                android:inputType="text" />-->



        </LinearLayout>

    </ScrollView>


</LinearLayout>